welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit = false
	for (i <- 1 to 6) {
		if (estSurBiscuit) {
			vuBiscuit = true
		}
		avance();
		if (vuBiscuit == true) {
			return true
		} else {
			return false
		}
	}
	for (i2 <- 1 to 6) {
		recule();
	}
}
	
		
